WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
209932
REGRESSION (
r258525
): Leak of NSMutableAttributedString in -[WebAccessibilityObjectWrapper doAXAttributedStringForTextMarkerRange:spellCheck:]
https://bugs.webkit.org/show_bug.cgi?id=209932
Summary
REGRESSION (r258525): Leak of NSMutableAttributedString in -[WebAccessibility...
David Kilzer (:ddkilzer)
Reported
2020-04-02 15:08:26 PDT
Leak of NSMutableAttributedString in -[WebAccessibilityObjectWrapper doAXAttributedStringForTextMarkerRange:spellCheck:]. [...] RefPtr<Range> range = [protectedSelf rangeForTextMarkerRange:textMarkerRange]; NSMutableAttributedString* attrString = [[NSMutableAttributedString alloc] init]; if (!range) return nil; // LEAK. TextIterator it(*range); [...]
Attachments
Patch v1
(1.85 KB, patch)
2020-04-02 15:14 PDT
,
David Kilzer (:ddkilzer)
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2020-04-02 15:08:33 PDT
<
rdar://problem/61228565
>
David Kilzer (:ddkilzer)
Comment 2
2020-04-02 15:14:47 PDT
Created
attachment 395308
[details]
Patch v1
Darin Adler
Comment 3
2020-04-02 16:06:15 PDT
Comment on
attachment 395308
[details]
Patch v1 Thanks for catching that Dave. Strange that we were not using a RetainPtr.
EWS
Comment 4
2020-04-02 16:53:00 PDT
Committed
r259428
: <
https://trac.webkit.org/changeset/259428
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 395308
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug