REGRESSION (r258525): Leak of NSMutableAttributedString in -[WebAccessibilityObjectWrapper doAXAttributedStringForTextMarkerRange:spellCheck:] <https://webkit.org/b/209932> <rdar://problem/61228565>

Reviewed by Chris Fleizach.

* accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper doAXAttributedStringForTextMarkerRange:spellCheck:]):
Move early return to avoid leaking NSMutableAttributedString.


Canonical link: https://commits.webkit.org/222852@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@259428 268f45cc-cd09-0410-ab3c-d52691b4dbfc